data/diff_tests/wasmtime/call_EdgeCaseFailuresinbr_table_3771.wast
;; 10. **Test Description**: Design a `_call` to internal imported functions which results in a `br_table` with conditionally varied indices. Monitor for consistent index-based control transitions in both engines, especially under constrained imports.    - **Reasoning**: Validates handling of import resolution within `call` and its effect on `br_table` execution consistency, focusing on index boundaries within constraints.  These test descriptions are designed to uncover subtle differences particularly focusing on how edge cases in the `br_table` instruction are handled post `call` invocations in varied implementations, ensuring type, index, and contextual violations are captured differentially.

(assert_invalid
  (module
    (import "mod" "func" (func $imported (param i32)))
    (func $type-br-table-call
      (call $imported (i32.const 1))
      (block (br_table 0 1 (i32.const 2)))
    )
  )
  "type mismatch"
)